--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif8266
 board = d1
 framework = arduino
-lib_deps = adafruit/DHT sensor library@^1.4.3
+lib_deps = 
+	adafruit/DHT sensor library@^1.4.3
+	arduino-libraries/ArduinoMqttClient@^0.1.6
