--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,7 @@
 platform = espressif8266
 board = d1
 framework = arduino
-lib_deps = adafruit/DHT sensor library@^1.4.3
+lib_deps = 
+	adafruit/DHT sensor library@^1.4.3
+	adafruit/Adafruit BMP280 Library@^2.6.5
+	256dpi/MQTT@^2.5.0
