add network functionality

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,17 +1,41 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
+[platformio]
+default_envs = release
 
-[env:d1]
-platform = espressif8266
+; Default options
+[env]
 board = d1
+platform = espressif8266
 framework = arduino
+
+upload_speed = 2000000 ; This is propably the ESP's highest possible baud rate without errors.
+
 lib_deps = 
 	adafruit/DHT sensor library@^1.4.3
 	arduino-libraries/ArduinoMqttClient@^0.1.6
+
+; Your secrets here
+build_flags = 
+	'-D WIFI_SSID="hello there"'		; WIFI SSID
+	'-D WIFI_PASS="88181337"'			; WIFI passphrase
+	'-D WIFI_HOST="WemosD1R1"'			; Client hostname, which has to be RFC952 compliant.
+	'-D MQTT_BROK="10.10.0.126"'		; URL or IP address pointing towards the MQTT Broker.
+	'-D MQTT_PORT=1883'					; The port on which the Broker listens. Default is 1883.
+	'-D MQTT_USER="testuino23q4ttg"'	; The client ID for authentication with the MQTT Broker.
+	'-D MQTT_PASS="1234"'				; The password for authentication with the MQTT Broker.
+
+; Release version
+[env:release]
+
+; Debug version with prints to serial port
+[env:debug]
+build_type = debug
+build_flags = 
+	${env.build_flags}
+	-D DEBUG
+
+; Debug version with more verbose prints to serial port
+[env:debug_verbose]
+build_type = debug
+build_flags = 
+	${env:debug.build_flags}
+	-D DEBUG_ESP_CORE ; Will be used by ESP core library.
