--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@ upload_speed = 2000000 ; This is propably the ESP's highest possible baud rate w
 
 lib_deps = 
 	adafruit/DHT sensor library@^1.4.3
+	adafruit/Adafruit BMP280 Library@^2.6.5
 	arduino-libraries/ArduinoMqttClient@^0.1.6
 
 ; Your secrets here
