changed ini and modified humtemp

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,11 +19,11 @@ lib_deps =
 build_flags = 
 	'-D WIFI_SSID="hello there"'		; WIFI SSID
 	'-D WIFI_PASS="88181337"'			; WIFI passphrase
-	'-D WIFI_HOST="WemosD1R1"'			; Client hostname, which has to be RFC952 compliant.
+	'-D WIFI_HOST="WemosD1R1-Passi"'			; Client hostname, which has to be RFC952 compliant.
 	'-D MQTT_BROK="10.10.0.126"'		; URL or IP address pointing towards the MQTT Broker.
 	'-D MQTT_PORT=1883'					; The port on which the Broker listens. Default is 1883.
-	'-D MQTT_USER="testuino23q4ttg"'	; The client ID for authentication with the MQTT Broker.
-	'-D MQTT_PASS="1234"'				; The password for authentication with the MQTT Broker.
+	'-D MQTT_USER="testuino23q4ttgadwdasd"'	; The client ID for authentication with the MQTT Broker.
+	'-D MQTT_PASS="1234waw"'				; The password for authentication with the MQTT Broker.
 
 ; Release version
 [env:release]
@@ -40,4 +40,6 @@ build_flags =
 build_type = debug
 build_flags = 
 	${env:debug.build_flags}
-	-D DEBUG_ESP_CORE ; Will be used by ESP core library.
+	-D DEBUG_ESP_CORE
+	-D DEBUG_ESP_WIFI 
+	-D DEBUG_ESP_PORT=Serial
