add dht debug flag, remove duplicate dep

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,17 +13,16 @@ lib_deps =
 	adafruit/DHT sensor library@^1.4.3
 	adafruit/Adafruit BMP280 Library@^2.6.5
 	arduino-libraries/ArduinoMqttClient@^0.1.6
-	adafruit/Adafruit BMP280 Library@^2.6.5
 
 ; Your secrets here
 build_flags = 
 	'-D WIFI_SSID="hello there"'		; WIFI SSID
 	'-D WIFI_PASS="88181337"'			; WIFI passphrase
-	'-D WIFI_HOST="WemosD1R1-Passi"'			; Client hostname, which has to be RFC952 compliant.
+	'-D WIFI_HOST="WemosD1R1-Marv"'			; Client hostname, which has to be RFC952 compliant.
 	'-D MQTT_BROK="10.10.0.126"'		; URL or IP address pointing towards the MQTT Broker.
 	'-D MQTT_PORT=1883'					; The port on which the Broker listens. Default is 1883.
-	'-D MQTT_USER="testuino23q4ttgadwdasd"'	; The client ID for authentication with the MQTT Broker.
-	'-D MQTT_PASS="1234waw"'				; The password for authentication with the MQTT Broker.
+	'-D MQTT_USER="testuino2Marvgadwdasd"'	; The client ID for authentication with the MQTT Broker.
+	'-D MQTT_PASS="1234wazufgw"'				; The password for authentication with the MQTT Broker.
 
 ; Release version
 [env:release]
@@ -43,3 +42,4 @@ build_flags =
 	-D DEBUG_ESP_CORE
 	-D DEBUG_ESP_WIFI 
 	-D DEBUG_ESP_PORT=Serial
+	-D DHT_DEBUG
