--- a/platformio.ini
+++ b/platformio.ini
@@ -6,23 +6,22 @@ default_envs = release
 board = d1
 platform = espressif8266
 framework = arduino
-
 upload_speed = 2000000 ; This is propably the ESP's highest possible baud rate without errors.
-
 lib_deps = 
-	adafruit/DHT sensor library@^1.4.3
-	adafruit/Adafruit BMP280 Library@^2.6.5
-	arduino-libraries/ArduinoMqttClient@^0.1.6
-
-; Your secrets here
-build_flags = 
-	'-D WIFI_SSID="hello there"'		; WIFI SSID
-	'-D WIFI_PASS="88181337"'			; WIFI passphrase
+	SPI
+	adafruit/Adafruit BusIO @ ^1.13.2
+	adafruit/Adafruit Unified Sensor @ ^1.1.6
+	adafruit/Adafruit BMP280 Library @ ^2.6.5
+	adafruit/DHT sensor library @ ^1.4.4
+	arduino-libraries/ArduinoMqttClient @ ^0.1.6
+build_flags = ; Your secrets here
+	'-D WIFI_SSID="hello there"'			; WIFI SSID
+	'-D WIFI_PASS="88181337"'				; WIFI passphrase
 	'-D WIFI_HOST="WemosD1R1-Marv"'			; Client hostname, which has to be RFC952 compliant.
-	'-D MQTT_BROK="10.10.0.126"'		; URL or IP address pointing towards the MQTT Broker.
-	'-D MQTT_PORT=1883'					; The port on which the Broker listens. Default is 1883.
+	'-D MQTT_BROK="10.10.0.126"'			; URL or IP address pointing towards the MQTT Broker.
+	'-D MQTT_PORT=1883'						; The port on which the Broker listens. Default is 1883.
 	'-D MQTT_USER="testuino2Marvgadwdasd"'	; The client ID for authentication with the MQTT Broker.
-	'-D MQTT_PASS="1234wazufgw"'				; The password for authentication with the MQTT Broker.
+	'-D MQTT_PASS="1234wazufgw"'			; The password for authentication with the MQTT Broker.
 
 ; Release version
 [env:release]
