redesign sensor interfaces

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,8 @@ lib_deps =
 	adafruit/Adafruit BMP280 Library @ ^2.6.5
 	adafruit/DHT sensor library @ ^1.4.4
 	arduino-libraries/ArduinoMqttClient @ ^0.1.6
+	bblanchon/ArduinoJson @ ^6.19.4
+	claws/BH1750 @ ^1.3.0
 build_flags = ; Your secrets here
 	'-D WIFI_SSID="hello there"'			; WIFI SSID
 	'-D WIFI_PASS="88181337"'				; WIFI passphrase
@@ -39,6 +41,7 @@ build_type = debug
 build_flags = 
 	${env:debug.build_flags}
 	-D DEBUG_ESP_CORE
-	-D DEBUG_ESP_WIFI 
+	-D DEBUG_ESP_WIFI
 	-D DEBUG_ESP_PORT=Serial
 	-D DHT_DEBUG
+	-D BH1750_DEBUG
