--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ lib_deps =
 	adafruit/DHT sensor library @ ^1.4.4
 	arduino-libraries/ArduinoMqttClient @ ^0.1.6
 	bblanchon/ArduinoJson @ ^6.19.4
+	bblanchon/StreamUtils @ ^1.6.3
 	claws/BH1750 @ ^1.3.0
 build_flags = ; Your secrets here
 	'-D WIFI_SSID="hello there"'			; WIFI SSID
