--- a/platformio.ini
+++ b/platformio.ini
@@ -17,14 +17,15 @@ lib_deps =
 	bblanchon/ArduinoJson @ ^6.19.4
 	bblanchon/StreamUtils @ ^1.6.3
 	claws/BH1750 @ ^1.3.0
+	miguel5612/MQUnifiedsensor @ ^3.0.0
 build_flags = ; Your secrets here
 	'-D WIFI_SSID="hello there"'			; WIFI SSID
 	'-D WIFI_PASS="88181337"'				; WIFI passphrase
 	'-D WIFI_HOST="WemosD1R1-Marv"'			; Client hostname, which has to be RFC952 compliant.
 	'-D MQTT_BROK="10.10.0.126"'			; URL or IP address pointing towards the MQTT Broker.
 	'-D MQTT_PORT=1883'						; The port on which the Broker listens. Default is 1883.
-	'-D MQTT_USER="testuino2Marvgadwdasd"'	; The client ID for authentication with the MQTT Broker.
-	'-D MQTT_PASS="1234wazufgw"'			; The password for authentication with the MQTT Broker.
+	'-D MQTT_USER="weatheruino"'	; The client ID for authentication with the MQTT Broker.
+	'-D MQTT_PASS="1234wazufygh"'			; The password for authentication with the MQTT Broker.
 
 ; Release version
 [env:release]
