remove super secret password

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,11 +20,11 @@ lib_deps =
 	miguel5612/MQUnifiedsensor @ ^3.0.0
 build_flags = ; Your secrets here
 	'-D WIFI_SSID="hello there"'			; WIFI SSID
-	'-D WIFI_PASS="88181337"'				; WIFI passphrase
+	'-D WIFI_PASS=""'						; WIFI passphrase
 	'-D WIFI_HOST="WemosD1R1-Marv"'			; Client hostname, which has to be RFC952 compliant.
 	'-D MQTT_BROK="10.10.0.126"'			; URL or IP address pointing towards the MQTT Broker.
 	'-D MQTT_PORT=1883'						; The port on which the Broker listens. Default is 1883.
-	'-D MQTT_USER="weatheruino"'	; The client ID for authentication with the MQTT Broker.
+	'-D MQTT_USER="weatheruino"'			; The client ID for authentication with the MQTT Broker.
 	'-D MQTT_PASS="1234wazufygh"'			; The password for authentication with the MQTT Broker.
 
 ; Release version
